--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -7,27 +7,35 @@
 
 {% block content%}
 
+
+
+
 <link href="http://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
-                
 
-<div class=""style="position:static;margin-top:25vh;  width: 100%;height: 85vh;">
-    <center>
-        <br>
-        <br>
-        <br>
 
-        <div class="herobox">
-        
-        <p style="font-size: 56px;color: white;text-decoration: underline;margin-bottom: 2px">Full Stack Developer</p>
-        <p style="font-size: 30px;color: white;margin-bottom: 2px;">Python Java JavaScript HTML CSS</h3>
-        <h3 style="color: white"><a style="position: relative; text-decoration: underline;"  href='/contact/'>Hire me</a> or take a look below↓</p>
-    </div>
-</center>
-</div>
-<div id="myEl"style="overflow:hidden;position: absolute;width: 200%;height: 100%;z-index:-1000; opacity: 0.09;bottom:500px;">
-</div>
+<div class="zoomParticle"></div>
+
+
+
+
+    
+    <div id="heroText"style="position:absolute;height: 60vh;margin-top:30vh;">
+
+    <p style="font-size: 56px;color: white;text-decoration: underline;margin-bottom: 2px">Full Stack Developer</p>
+    <p style="font-size: 26px;color: white;margin-bottom: 2px;">Python Java JavaScript HTML CSS</p>
+    <p style="font-size: 26px;color: white;margin-bottom: 2px;">I love to learn and make new things</p>
+    <p style="color: white"><a style="position: relative;"  href='/contact/'class="btn btn-outline-info">Portfolio <i class="fa fa-solid fa-arrow-down"></i></a>
+    <a style="position: relative;"  href='/contact/'class="btn btn-outline-secondary">Contact <i class="fa fa-envelope"></i></a></p>
 
 </div>
+<div id="myEl"class="col-md-10"style="margin-top:17vh;width: 80%;height: 50vh; opacity: 0.8;z-index: 1000;"></div>
+
+
+
+
+<div style="height: 20vh;">
+
+
 </div>
 
 
@@ -36,6 +44,10 @@
 
 
 
+
+
+
+</div>
 
 <center><h1 style="text-decoration: underline;">Portfolio</h1></center>
 
