--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -26,7 +26,8 @@
     <title>Neal Mick!!</title>
   </head>
   <body>
-      <header class="site-header background">
+
+      <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
           <div class="container">
             <a class="navbar-brand mr-4" href="{% url 'index'%}"><h2>Neal Mick!</h2></a>
@@ -48,7 +49,7 @@
               </div>
         </nav>
       </header>
-      <main role="main" class="container">
+      <main role="main" class="container ">
         <div class="row">
 
             {% if messages%}
@@ -61,7 +62,6 @@
             {% block f %}{% endblock %}
             {% block content %}{% endblock %}
     </div>
-
 
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
