--- a/portfolio/templates/portfolio/contact.html
+++ b/portfolio/templates/portfolio/contact.html
@@ -3,12 +3,15 @@
 {% load static %}
 
 {% block content%}
+<div class="zoomParticle"style="opacity:.06"></div>
 
     <div id="info"class="container content-section2" style="text-align: left; margin-top: 50px;">
     
     <div style="width: 80%;margin-left: 10%;color:white;">
         <center>
         <h2 style="text-decoration: underline;color:white">Contact Me <i class="fa fa-envelope"></i></h2>
+        <a href="mailto:nealmick99@gmail.com">nealmick99@gmail.com</a>
+
         </center>
         <br>
         <br>
