--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -19,19 +19,19 @@
 
 
     
-    <div id="heroText"style="position:absolute;height: 60vh;margin-top:30vh;">
+<div id="heroText"style="z-index:100000;position:absolute;height: 60vh;margin-top:30vh;">
 
     <p style="font-size: 56px;color: white;text-decoration: underline;margin-bottom: 2px">Full Stack Developer</p>
     <p style="font-size: 26px;color: white;margin-bottom: 2px;">Python Java JavaScript HTML CSS</p>
     <p style="font-size: 26px;color: white;margin-bottom: 2px;">I love to learn and make new things</p>
-    <p style="color: white"><a style="position: relative;"  href='/contact/'class="btn btn-outline-info">Portfolio <i class="fa fa-solid fa-arrow-down"></i></a>
+    <p style="color: white"><a style="position: relative;"  href='#section1'class="btn btn-outline-info">Portfolio <i class="fa fa-solid fa-arrow-down"></i></a>
     <a style="position: relative;"  href='/contact/'class="btn btn-outline-secondary">Contact <i class="fa fa-envelope"></i></a></p>
 
 </div>
-<div id="myEl"class="col-md-10"style="margin-top:17vh;width: 80%;height: 50vh; opacity: 0.8;z-index: 1000;"></div>
+<div id="myEl"class="col-md-10"style="margin-top:17vh;width: 80%;height: 50vh; opacity: 0.75;z-index: 1000;"></div>
 
 
-
+<div id="section1"></div>
 
 <div style="height: 20vh;">
 
@@ -48,7 +48,6 @@
 
 
 </div>
-
 <center><h1 style="text-decoration: underline;">Portfolio</h1></center>
 
 
@@ -456,7 +455,7 @@
       </center>
     
         <p style="color:white">
-            • Information Systems, specialization in Cyber Security, Piedmont Virginia Community College, 2019 - Present
+            • Information Systems, specialization in Cyber Security, Piedmont Virginia Community College, Currently enrolled.
         </p>        
         <p style="color:white">
             • Pertinent courses include; Computer Science, Client Side Scripting, TCP/IP Networking, Computer Forensics, Network Security, Windows and Linux Server Administration, Java, C, and Python classes.
@@ -525,7 +524,6 @@
     
       <div id="info" class="content-section2"style="width:90%;text-align: left; margin-top: 75px;  margin-right: auto;margin-left: auto;">
         <center>
-          <h2 style="color:white;text-decoration: underline;" >More projects coming soon!</h2>
               <!--
               <a href="{% url 'resume' %}" class="btn btn-outline-info"><i class="far fa-address-card"></i></a>
       
