--- a/portfolio/templates/portfolio/resume.html
+++ b/portfolio/templates/portfolio/resume.html
@@ -3,6 +3,8 @@
 {% load static %}
 
 {% block content%}
+<div class="zoomParticle"style="opacity:.06"></div>
+
     <div id="info"class="container content-section2" style="text-align: left; margin-top: 50px;">
         <center>
         <h1 style="color:white">About Me</h1>
