--- a/ttt/templates/ttt/index.html
+++ b/ttt/templates/ttt/index.html
@@ -5,20 +5,20 @@
 
 
 {% load static %}
-<div class="container"style="">
+</div>
+</div>
 
-    <center>
+<div class="zoomParticle"style="opacity: .06;"></div>
     
-        <title>TicTacToe</title>
+<title>TicTacToe</title>
+<center>
     
     <h1 id='winner' style="  
     color: #17a2b8;
-    font-size: 75px;
+    font-size: 60px;
     font-family: sans-serif;">TicTacToe!</h1>
-    </center>
-</div>
 
-        <div class="board2 asdf2" id="board" style="">
+        <div class="board2 asdf2 col-md-6" id="board" style="margin-top:0;margin-left:auto;margin-right: auto;">
             <div class="cell2" id='box1' data-cell  onclick="box1()"></div>
             <div class="cell2" id='box2' data-cell onclick="box2()"></div>
             <div class="cell2" id='box3' data-cell onclick="box3()"></div>
@@ -30,12 +30,8 @@
             <div class="cell2" id='box9' data-cell onclick="box9()"></div>
         </div>
 
-
-        <div class="bottom-left2">
             <button class="btn btn-outline-info " id="reset-btn" onclick="restart()">Restart</button>
-
-        </div>
-
+        </center>
 
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
