--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -46,14 +46,20 @@
   -45vw -39vh 1px 0px #2AA2B8,7vw -19vh 3px 2px #2AA2B8,-8vw 0vh 1px 3px #2AA2B8,-20vw 39vh 2px 3px #2AA2B8,10vw 14vh 3px 1px #2AA2B8,43vw 35vh 2px 1px #2AA2B8,
   -10vw -35vh 0px 1px #2AA2B8,-41vw -11vh 2px 3px #2AA2B8,49vw 42vh 3px 0px #2AA2B8,-21vw -37vh 1px 3px #2AA2B8,-14vw 24vh 1px 0px #2AA2B8,35vw 41vh 3px 1px #2AA2B8,
   -33vw 48vh 3px 3px #2AA2B8,-19vw -35vh 3px 1px #2AA2B8,-34vw -11vh 0px 3px #2AA2B8,-47vw 40vh 0px 1px #2AA2B8,28vw 9vh 2px 2px #2AA2B8,-10vw 37vh 3px 2px #2AA2B8,
-  23vw -33vh 1px 3px #2AA2B8,-25vw -43vh 0px 0px #2AA2B8,-34vw -39vh 0px 2px #2AA2B8,-23vw 18vh 0px 0px #2AA2B8,1vw 2vh 3px 2px #2AA2B8,-43vw 30vh 2px 3px #2AA2B8,45vw 32vh 2px 3px #2AA2B8,-9vw -13vh 0px 1px #2AA2B8,41vw -10vh 3px 0px #2AA2B8,5vw -2vh 1px 3px #2AA2B8,-48vw 39vh 1px 2px #2AA2B8,-48vw 36vh 2px 0px #2AA2B8,8vw 44vh 1px 0px #2AA2B8,-22vw -1vh 3px 0px #2AA2B8,0vw 20vh 1px 0px #2AA2B8,4vw -47vh 2px 3px #2AA2B8,-50vw 22vh 1px 3px #2AA2B8,38vw -14vh 0px 1px #2AA2B8,-16vw -4vh 3px 1px #2AA2B8,-25vw 29vh 3px 0px #2AA2B8,-19vw -20vh 0px 0px #2AA2B8,23vw -7vh 1px 2px #2AA2B8,33vw -8vh 1px 2px #2AA2B8,-12vw -34vh 3px 1px #2AA2B8,-37vw 33vh 0px 1px #2AA2B8,44vw 17vh 1px 3px #2AA2B8,-40vw 24vh 3px 3px #2AA2B8,18vw 28vh 3px 1px #2AA2B8,28vw 10vh 2px 0px #2AA2B8,-28vw -17vh 2px 0px #2AA2B8,50vw -13vh 2px 3px #2AA2B8,21vw -10vh 3px 2px #2AA2B8,23vw -22vh 0px 1px #2AA2B8,46vw 39vh 0px 1px #2AA2B8,14vw -9vh 3px 3px #2AA2B8,42vw -39vh 1px 2px #2AA2B8,32vw -12vh 0px 3px #2AA2B8,-31vw 41vh 0px 2px #2AA2B8,12vw -32vh 3px 3px #2AA2B8,23vw -48vh 2px 2px #2AA2B8,9vw 9vh 0px 0px #2AA2B8,27vw -9vh 2px 1px #2AA2B8,3vw -7vh 3px 2px #2AA2B8,8vw -26vh 1px 2px #2AA2B8,18vw -28vh 0px 3px #2AA2B8,-47vw -15vh 3px 1px #2AA2B8,44vw 14vh 3px 1px #2AA2B8,44vw 47vh 3px 2px #2AA2B8,33vw 5vh 3px 1px #2AA2B8,-40vw -37vh 1px 0px #2AA2B8,-33vw -39vh 0px 1px #2AA2B8,32vw -27vh 1px 0px #2AA2B8,26vw 30vh 2px 1px #2AA2B8,-19vw 4vh 0px 0px #2AA2B8,-4vw 29vh 0px 1px #2AA2B8,35vw -15vh 0px 1px #2AA2B8,35vw 12vh 0px 2px #2AA2B8,-11vw -48vh 0px 3px #2AA2B8,46vw -17vh 0px 2px #2AA2B8,25vw -27vh 1px 2px #2AA2B8,-41vw -45vh 0px 2px #2AA2B8,-3vw 23vh 0px 1px #2AA2B8,13vw -16vh 1px 0px #2AA2B8,23vw 38vh 2px 3px #2AA2B8,22vw -3vh 2px 2px #2AA2B8,-36vw -40vh 2px 1px #2AA2B8,-28vw -48vh 1px 3px #2AA2B8,42vw 19vh 0px 0px #2AA2B8,43vw -5vh 2px 3px #2AA2B8,50vw 23vh 0px 1px #2AA2B8,48vw 9vh 1px 2px #2AA2B8,-26vw -50vh 1px 1px #2AA2B8,3vw -45vh 2px 2px #2AA2B8,-2vw 32vh 3px 3px #2AA2B8,-3vw -14vh 0px 1px #2AA2B8,41vw 47vh 1px 0px #2AA2B8,31vw -21vh 2px 2px #2AA2B8,-16vw 5vh 2px 1px #2AA2B8,-16vw 1vh 0px 3px #2AA2B8,-16vw 36vh 2px 1px #2AA2B8,32vw 25vh 2px 0px #2AA2B8,19vw -50vh 0px 2px #2AA2B8,-48vw 33vh 0px 1px #2AA2B8,-26vw -25vh 3px 0px #2AA2B8,11vw 4vh 0px 3px #2AA2B8,12vw -13vh 2px 2px #2AA2B8,38vw 39vh 1px 0px #2AA2B8,-15vw -18vh 0px 3px #2AA2B8,40vw 14vh 3px 0px #2AA2B8,47vw -49vh 3px 2px #2AA2B8,36vw 14vh 3px 1px #2AA2B8,46vw -39vh 1px 2px #2AA2B8,-18vw -13vh 0px 0px #2AA2B8,-48vw 31vh 3px 1px #2AA2B8,-44vw -16vh 0px 3px #2AA2B8,9vw 17vh 0px 1px #2AA2B8,28vw 45vh 3px 0px #2AA2B8,27vw -32vh 0px 2px #2AA2B8,15vw 22vh 3px 2px #2AA2B8;
+  23vw -33vh 1px 3px #2AA2B8,-25vw -43vh 0px 0px #2AA2B8,-34vw -39vh 0px 2px #2AA2B8,-23vw 18vh 0px 0px #2AA2B8,1vw 2vh 3px 2px #2AA2B8,-43vw 30vh 2px 3px #2AA2B8,45vw 32vh 2px 3px #2AA2B8,-9vw -13vh 0px 1px #2AA2B8,41vw -10vh 3px 0px #2AA2B8,5vw -2vh 1px 3px #2AA2B8,-48vw 39vh 1px 2px #2AA2B8,-48vw 36vh 2px 0px #2AA2B8,8vw 44vh 1px 0px #2AA2B8,-22vw -1vh 3px 0px #2AA2B8,0vw 20vh 1px 0px #2AA2B8,4vw -47vh 2px 3px #2AA2B8,-50vw 22vh 1px 3px #2AA2B8,38vw -14vh 0px 1px #2AA2B8,-16vw -4vh 3px 1px #2AA2B8,-25vw 29vh 3px 0px #2AA2B8,-19vw -20vh 0px 0px #2AA2B8,23vw -7vh 1px 2px #2AA2B8,33vw -8vh 1px 2px #2AA2B8,-12vw -34vh 3px 1px #2AA2B8,-37vw 33vh 0px 1px #2AA2B8,44vw 17vh 1px 3px #2AA2B8,-40vw 24vh 3px 3px #2AA2B8,18vw 28vh 3px 1px #2AA2B8,28vw 10vh 2px 0px #2AA2B8,-28vw -17vh 2px 0px #2AA2B8,50vw -13vh 2px 3px #2AA2B8,21vw -10vh 3px 2px #2AA2B8,23vw -22vh 0px 1px #2AA2B8,46vw 39vh 0px 1px #2AA2B8,14vw -9vh 3px 3px #2AA2B8,42vw -39vh 1px 2px #2AA2B8,32vw -12vh 0px 3px #2AA2B8,-31vw 41vh 0px 2px #2AA2B8,12vw -32vh 3px 3px #2AA2B8,23vw -48vh 2px 2px #2AA2B8,9vw 9vh 0px 0px #2AA2B8,27vw -9vh 2px 1px #2AA2B8,3vw -7vh 3px 2px #2AA2B8,8vw -26vh 1px 2px #2AA2B8,18vw -28vh 0px 3px #2AA2B8,-47vw -15vh 3px 1px #2AA2B8,44vw 14vh 3px 1px #2AA2B8,44vw 47vh 3px 2px #2AA2B8,33vw 5vh 3px 1px #2AA2B8,-40vw -37vh 1px 0px #2AA2B8,-33vw -39vh 0px 1px #2AA2B8,32vw -27vh 1px 0px #2AA2B8,26vw 30vh 2px 1px #2AA2B8,-19vw 4vh 0px 0px #2AA2B8,-4vw 29vh 0px 1px #2AA2B8,35vw -15vh 0px 1px #2AA2B8,35vw 12vh 0px 2px #2AA2B8,-11vw -48vh 0px 3px #2AA2B8,46vw -17vh 0px 2px #2AA2B8,25vw -27vh 1px 2px #2AA2B8,-41vw -45vh 0px 2px #2AA2B8,-3vw 23vh 0px 1px #2AA2B8,13vw -16vh 1px 0px #2AA2B8,23vw 38vh 2px 3px #2AA2B8,22vw -3vh 2px 2px #2AA2B8,-36vw -40vh 2px 1px #2AA2B8,-28vw -48vh 1px 3px #2AA2B8,42vw 19vh 0px 0px #2AA2B8,43vw -5vh 2px 3px #2AA2B8,50vw 23vh 0px 1px #2AA2B8,48vw 9vh 1px 2px #2AA2B8,-26vw -50vh 1px 1px #2AA2B8,3vw -45vh 2px 2px #2AA2B8,-2vw 32vh 3px 3px #2AA2B8,-3vw -14vh 0px 1px #2AA2B8,41vw 47vh 1px 0px #2AA2B8,31vw -21vh 2px 2px #2AA2B8,-16vw 5vh 2px 1px #2AA2B8,-16vw 1vh 0px 3px #2AA2B8,-16vw 36vh 2px 1px #2AA2B8,32vw 25vh 2px 0px #2AA2B8,19vw -50vh 0px 2px #2AA2B8,-48vw 33vh 0px 1px #2AA2B8,-26vw -25vh 3px 0px #2AA2B8,11vw 4vh 0px 3px #2AA2B8,12vw -13vh 2px 2px #2AA2B8,38vw 39vh 1px 0px #2AA2B8,-15vw -18vh 0px 3px #2AA2B8,40vw 14vh 3px 0px #2AA2B8,47vw -49vh 3px 2px #2AA2B8,36vw 14vh 3px 1px #2AA2B8,46vw -39vh 1px 2px #2AA2B8,-18vw -13vh 0px 0px #2AA2B8,-48vw 31vh 3px 1px #2AA2B8,-44vw -16vh 0px 3px #2AA2B8,9vw 17vh 0px 1px #2AA2B8,28vw 45vh 3px 0px #2AA2B8,27vw -32vh 0px 2px #2AA2B8,15vw 22vh 3px 2px #2AA2B8,
+  136vw -34vh 3px 3px #2AA2B8,192vw 181vh 1px 1px #2AA2B8,138vw 206vh 0px 0px #2AA2B8,14vw 19vh 3px 2px #2AA2B8,-34vw -30vh 0px 1px #2AA2B8,28vw 271vh 2px 1px #2AA2B8,76vw 280vh 0px 3px #2AA2B8,159vw 28vh 3px 3px #2AA2B8,293vw 63vh 0px 0px #2AA2B8,167vw 178vh 0px 0px #2AA2B8,27vw 116vh 3px 0px #2AA2B8,-1vw 208vh 2px 3px #2AA2B8,88vw -14vh 2px 3px #2AA2B8,297vw 165vh 2px 0px #2AA2B8,102vw 298vh 1px 1px #2AA2B8,-6vw 283vh 1px 2px #2AA2B8,140vw 86vh 3px 2px #2AA2B8,129vw 208vh 1px 3px #2AA2B8,34vw 108vh 1px 3px #2AA2B8,62vw 225vh 2px 1px #2AA2B8,155vw 256vh 0px 1px #2AA2B8,57vw 250vh 1px 2px #2AA2B8,38vw 93vh 3px 0px #2AA2B8,110vw 112vh 2px 3px #2AA2B8,98vw 238vh 1px 2px #2AA2B8,93vw -40vh 2px 1px #2AA2B8,136vw -37vh 3px 2px #2AA2B8,235vw 82vh 0px 3px #2AA2B8,209vw 266vh 3px 0px #2AA2B8,266vw 13vh 1px 1px #2AA2B8,28vw 287vh 3px 3px #2AA2B8,106vw 296vh 0px 3px #2AA2B8,206vw 154vh 0px 2px #2AA2B8,211vw 18vh 2px 1px #2AA2B8,147vw -33vh 3px 1px #2AA2B8,112vw 293vh 1px 1px #2AA2B8,24vw 113vh 3px 0px #2AA2B8,51vw 83vh 1px 3px #2AA2B8,61vw 143vh 0px 3px #2AA2B8,123vw 151vh 3px 1px #2AA2B8,-7vw 204vh 1px 1px #2AA2B8,12vw 108vh 1px 0px #2AA2B8,104vw 148vh 0px 3px #2AA2B8,167vw 235vh 3px 2px #2AA2B8,21vw 283vh 1px 3px #2AA2B8,110vw 297vh 0px 2px #2AA2B8,129vw 222vh 2px 0px #2AA2B8,44vw 130vh 2px 1px #2AA2B8,273vw 5vh 1px 1px #2AA2B8,170vw 267vh 2px 1px #2AA2B8,210vw 257vh 0px 2px #2AA2B8,188vw 168vh 0px 0px #2AA2B8,-14vw 299vh 0px 3px #2AA2B8,249vw 65vh 2px 1px #2AA2B8,248vw 94vh 3px 2px #2AA2B8,118vw -4vh 3px 2px #2AA2B8,280vw 205vh 0px 3px #2AA2B8,223vw 253vh 3px 0px #2AA2B8,46vw 215vh 3px 0px #2AA2B8,39vw 151vh 2px 2px #2AA2B8,85vw -38vh 0px 3px #2AA2B8,71vw 153vh 3px 3px #2AA2B8,27vw 214vh 3px 1px #2AA2B8,111vw 253vh 2px 0px #2AA2B8,74vw 209vh 1px 3px #2AA2B8,-15vw 258vh 0px 3px #2AA2B8,182vw 297vh 3px 2px #2AA2B8,280vw 211vh 1px 1px #2AA2B8,248vw 243vh 0px 2px #2AA2B8,-18vw -18vh 1px 0px #2AA2B8,256vw 30vh 1px 2px #2AA2B8,75vw -46vh 2px 1px #2AA2B8,110vw 165vh 1px 2px #2AA2B8,157vw 80vh 3px 0px #2AA2B8,164vw 162vh 1px 3px #2AA2B8,122vw 25vh 0px 2px #2AA2B8,52vw 172vh 2px 1px #2AA2B8,60vw 280vh 1px 1px #2AA2B8,87vw 226vh 0px 2px #2AA2B8,37vw 276vh 3px 3px #2AA2B8,242vw 46vh 0px 0px #2AA2B8,-47vw 26vh 1px 3px #2AA2B8,197vw 72vh 0px 3px #2AA2B8,-35vw 83vh 1px 2px #2AA2B8,172vw 102vh 3px 0px #2AA2B8,29vw 217vh 0px 3px #2AA2B8,164vw 63vh 1px 2px #2AA2B8,231vw 235vh 2px 3px #2AA2B8,259vw 153vh 0px 2px #2AA2B8,-33vw 28vh 2px 0px #2AA2B8,161vw 142vh 1px 2px #2AA2B8,30vw -34vh 1px 1px #2AA2B8,93vw 185vh 2px 2px #2AA2B8,228vw -28vh 2px 1px #2AA2B8,229vw 113vh 1px 3px #2AA2B8,191vw 24vh 1px 2px #2AA2B8,176vw 26vh 2px 1px #2AA2B8,239vw 214vh 2px 0px #2AA2B8,65vw 231vh 3px 3px #2AA2B8,212vw 181vh 1px 2px #2AA2B8,185vw 100vh 1px 2px #2AA2B8,180vw -36vh 1px 2px #2AA2B8,-20vw 104vh 3px 0px #2AA2B8,256vw 15vh 2px 3px #2AA2B8,265vw 59vh 0px 2px #2AA2B8,248vw 225vh 2px 2px #2AA2B8,-17vw 103vh 2px 3px #2AA2B8,256vw 87vh 1px 2px #2AA2B8,126vw 169vh 1px 3px #2AA2B8,193vw 247vh 3px 2px #2AA2B8,199vw 57vh 2px 0px #2AA2B8,275vw 15vh 0px 0px #2AA2B8,58vw -14vh 1px 1px #2AA2B8,67vw 296vh 2px 3px #2AA2B8,293vw 158vh 3px 0px #2AA2B8,143vw -3vh 3px 3px #2AA2B8,43vw 135vh 1px 2px #2AA2B8,34vw 212vh 3px 1px #2AA2B8,287vw 211vh 3px 3px #2AA2B8,-28vw 204vh 3px 0px #2AA2B8,6vw 176vh 0px 2px #2AA2B8,-19vw 236vh 0px 2px #2AA2B8,262vw 85vh 3px 2px #2AA2B8,-7vw 22vh 0px 0px #2AA2B8,75vw 231vh 1px 2px #2AA2B8,-27vw 73vh 2px 1px #2AA2B8,94vw 176vh 0px 0px #2AA2B8,102vw 60vh 0px 1px #2AA2B8,260vw 193vh 3px 3px #2AA2B8,240vw 120vh 1px 1px #2AA2B8,-40vw 109vh 3px 2px #2AA2B8,122vw 293vh 0px 2px #2AA2B8,199vw 189vh 3px 3px #2AA2B8,161vw 250vh 3px 3px #2AA2B8,-38vw 204vh 2px 2px #2AA2B8,-42vw 129vh 0px 1px #2AA2B8,-44vw 257vh 0px 2px #2AA2B8,-8vw 58vh 0px 0px #2AA2B8,123vw 53vh 3px 2px #2AA2B8,-12vw 160vh 3px 1px #2AA2B8,237vw 235vh 3px 0px #2AA2B8,277vw 142vh 3px 0px #2AA2B8,16vw 214vh 3px 0px #2AA2B8,24vw 80vh 1px 0px #2AA2B8,247vw 3vh 0px 3px #2AA2B8,130vw 123vh 3px 3px #2AA2B8,-9vw 235vh 1px 2px #2AA2B8,-46vw 201vh 1px 0px #2AA2B8,154vw 109vh 2px 2px #2AA2B8,-39vw 68vh 3px 2px #2AA2B8,125vw -49vh 2px 0px #2AA2B8,232vw 136vh 3px 0px #2AA2B8,97vw 5vh 1px 1px #2AA2B8,51vw 182vh 2px 1px #2AA2B8,211vw 9vh 2px 1px #2AA2B8,172vw 172vh 3px 0px #2AA2B8,245vw 90vh 0px 0px #2AA2B8,-39vw 200vh 1px 2px #2AA2B8,68vw 168vh 0px 1px #2AA2B8,115vw 279vh 0px 3px #2AA2B8,20vw -41vh 3px 1px #2AA2B8,10vw 213vh 3px 3px #2AA2B8,185vw 195vh 0px 2px #2AA2B8,-15vw 54vh 3px 0px #2AA2B8,46vw 178vh 1px 1px #2AA2B8,-22vw 17vh 3px 3px #2AA2B8,-48vw 8vh 2px 3px #2AA2B8,179vw -31vh 1px 0px #2AA2B8,41vw 177vh 3px 3px #2AA2B8,65vw 259vh 0px 2px #2AA2B8,33vw 36vh 2px 1px #2AA2B8,-8vw 222vh 1px 0px #2AA2B8,294vw -50vh 3px 1px #2AA2B8,203vw 299vh 1px 2px #2AA2B8,21vw 177vh 2px 0px #2AA2B8,116vw -30vh 2px 2px #2AA2B8,237vw -16vh 0px 2px #2AA2B8,40vw -14vh 2px 1px #2AA2B8,-1vw 52vh 2px 3px #2AA2B8,75vw 273vh 3px 1px #2AA2B8,141vw 99vh 0px 0px #2AA2B8,119vw -45vh 1px 2px #2AA2B8,16vw 70vh 0px 2px #2AA2B8,241vw -33vh 3px 1px #2AA2B8,63vw -21vh 2px 0px #2AA2B8,32vw 291vh 2px 2px #2AA2B8,160vw 63vh 3px 0px #2AA2B8,-44vw 12vh 1px 0px #2AA2B8,12vw 16vh 3px 3px #2AA2B8,-40vw 202vh 3px 2px #2AA2B8,35vw 233vh 3px 2px #2AA2B8,7vw 17vh 3px 1px #2AA2B8,-35vw 142vh 1px 2px #2AA2B8,299vw -43vh 2px 2px #2AA2B8,121vw 140vh 2px 1px #2AA2B8,259vw 249vh 1px 0px #2AA2B8,247vw 109vh 3px 1px #2AA2B8,264vw 280vh 2px 0px #2AA2B8,60vw 135vh 1px 0px #2AA2B8,300vw 104vh 1px 1px #2AA2B8,102vw 259vh 2px 1px #2AA2B8,273vw 211vh 0px 1px #2AA2B8,207vw 163vh 3px 1px #2AA2B8,219vw 265vh 0px 2px #2AA2B8,248vw 122vh 1px 0px #2AA2B8,288vw 297vh 0px 1px #2AA2B8,275vw 88vh 2px 0px #2AA2B8,201vw 20vh 2px 2px #2AA2B8,220vw 179vh 1px 1px #2AA2B8,195vw -27vh 1px 2px #2AA2B8,204vw 19vh 0px 2px #2AA2B8,92vw 169vh 1px 1px #2AA2B8,-34vw -31vh 2px 0px #2AA2B8,188vw 69vh 2px 3px #2AA2B8,252vw 195vh 3px 0px #2AA2B8,38vw 188vh 0px 2px #2AA2B8,218vw 165vh 1px 2px #2AA2B8,81vw 21vh 0px 1px #2AA2B8,6vw 39vh 1px 0px #2AA2B8,168vw 152vh 2px 0px #2AA2B8,76vw 16vh 3px 0px #2AA2B8,245vw 138vh 0px 0px #2AA2B8,163vw 161vh 2px 3px #2AA2B8,233vw 190vh 3px 0px #2AA2B8,249vw -31vh 1px 2px #2AA2B8,202vw 21vh 2px 1px #2AA2B8,105vw -4vh 2px 3px #2AA2B8,280vw 31vh 3px 0px #2AA2B8,193vw 109vh 2px 3px #2AA2B8,35vw -35vh 3px 0px #2AA2B8,131vw 39vh 0px 0px #2AA2B8,206vw 255vh 3px 1px #2AA2B8,155vw 165vh 2px 2px #2AA2B8,121vw 108vh 3px 0px #2AA2B8,170vw 94vh 1px 3px #2AA2B8,117vw 242vh 3px 2px #2AA2B8,149vw 297vh 2px 3px #2AA2B8,-36vw 3vh 1px 1px #2AA2B8,96vw 187vh 3px 2px #2AA2B8,129vw 98vh 1px 3px #2AA2B8,15vw 88vh 1px 0px #2AA2B8,63vw 287vh 0px 2px #2AA2B8,228vw 106vh 0px 1px #2AA2B8,271vw 12vh 3px 3px #2AA2B8,50vw 90vh 0px 1px #2AA2B8,-8vw -31vh 3px 0px #2AA2B8,13vw 86vh 3px 3px #2AA2B8,50vw 153vh 2px 2px #2AA2B8,51vw 137vh 3px 2px #2AA2B8,-17vw 110vh 1px 1px #2AA2B8,154vw 220vh 0px 0px #2AA2B8,-46vw -37vh 2px 1px #2AA2B8,-7vw -15vh 0px 3px #2AA2B8,271vw 279vh 1px 3px #2AA2B8,257vw 198vh 2px 2px #2AA2B8,62vw -4vh 3px 0px #2AA2B8,267vw 224vh 3px 0px #2AA2B8,59vw 233vh 3px 2px #2AA2B8,227vw 84vh 2px 1px #2AA2B8,24vw 15vh 3px 3px #2AA2B8,-20vw -2vh 0px 3px #2AA2B8,25vw 229vh 1px 1px #2AA2B8,31vw 173vh 1px 1px #2AA2B8,127vw -38vh 2px 3px #2AA2B8,35vw -6vh 1px 1px #2AA2B8,-25vw 102vh 1px 0px #2AA2B8,263vw 217vh 3px 2px #2AA2B8,206vw 93vh 2px 2px #2AA2B8,55vw 204vh 0px 3px #2AA2B8,160vw 123vh 1px 2px #2AA2B8,224vw 109vh 3px 2px #2AA2B8,108vw 90vh 0px 0px #2AA2B8,191vw 247vh 2px 3px #2AA2B8,70vw 90vh 3px 1px #2AA2B8,138vw -19vh 2px 0px #2AA2B8,193vw 202vh 2px 3px #2AA2B8,198vw 9vh 1px 1px #2AA2B8,213vw 6vh 1px 1px #2AA2B8,31vw 299vh 2px 3px #2AA2B8,207vw 294vh 3px 2px #2AA2B8,100vw 134vh 3px 3px #2AA2B8,212vw 212vh 3px 3px #2AA2B8,189vw 216vh 3px 3px #2AA2B8,245vw 117vh 1px 0px #2AA2B8,142vw 92vh 3px 2px #2AA2B8,-5vw 123vh 3px 2px #2AA2B8,192vw 179vh 3px 3px #2AA2B8,245vw -17vh 2px 2px #2AA2B8,287vw 239vh 1px 1px #2AA2B8,-41vw -13vh 2px 1px #2AA2B8,85vw 291vh 2px 2px #2AA2B8,131vw 256vh 3px 3px #2AA2B8,61vw 300vh 1px 3px #2AA2B8,137vw 228vh 0px 1px #2AA2B8,281vw 97vh 1px 3px #2AA2B8,146vw 180vh 1px 3px #2AA2B8,-16vw 87vh 1px 3px #2AA2B8,288vw 130vh 1px 1px #2AA2B8,299vw 158vh 0px 2px #2AA2B8,223vw -18vh 1px 1px #2AA2B8,37vw -17vh 0px 3px #2AA2B8,230vw 237vh 2px 2px #2AA2B8,263vw 222vh 0px 1px #2AA2B8,165vw 44vh 3px 1px #2AA2B8,56vw 216vh 2px 1px #2AA2B8,143vw 283vh 0px 2px #2AA2B8,16vw 265vh 0px 1px #2AA2B8,296vw -32vh 0px 2px #2AA2B8,-34vw 194vh 2px 3px #2AA2B8,3vw 82vh 2px 1px #2AA2B8,202vw -5vh 1px 3px #2AA2B8,-27vw 203vh 0px 1px #2AA2B8,130vw 15vh 1px 1px #2AA2B8,-40vw 178vh 0px 0px #2AA2B8,118vw 74vh 2px 2px #2AA2B8,72vw 138vh 2px 3px #2AA2B8,59vw 171vh 3px 1px #2AA2B8,-35vw 245vh 1px 0px #2AA2B8,247vw 195vh 3px 2px #2AA2B8,236vw 192vh 1px 3px #2AA2B8,19vw 184vh 3px 3px #2AA2B8,6vw 31vh 0px 0px #2AA2B8,84vw 263vh 3px 2px #2AA2B8,-4vw 272vh 3px 1px #2AA2B8,76vw 56vh 1px 0px #2AA2B8,160vw 24vh 1px 2px #2AA2B8,222vw -36vh 0px 3px #2AA2B8,110vw -18vh 1px 0px #2AA2B8,280vw 164vh 2px 0px #2AA2B8,100vw -17vh 2px 2px #2AA2B8,4vw 32vh 3px 0px #2AA2B8,-29vw 264vh 1px 1px #2AA2B8,17vw 107vh 1px 2px #2AA2B8,-37vw 126vh 0px 3px #2AA2B8,56vw 248vh 0px 0px #2AA2B8,3vw 189vh 2px 3px #2AA2B8,-48vw 254vh 2px 2px #2AA2B8,51vw 254vh 3px 1px #2AA2B8,93vw 151vh 1px 2px #2AA2B8,272vw 135vh 2px 1px #2AA2B8,45vw -4vh 3px 1px #2AA2B8,-27vw 116vh 1px 3px #2AA2B8,151vw 253vh 3px 0px #2AA2B8,289vw 195vh 2px 1px #2AA2B8,205vw 286vh 3px 0px #2AA2B8,44vw 235vh 2px 0px #2AA2B8,201vw 96vh 0px 0px #2AA2B8,-45vw 68vh 2px 2px #2AA2B8,-36vw 11vh 1px 0px #2AA2B8,-41vw 205vh 2px 1px #2AA2B8,22vw 251vh 1px 2px #2AA2B8,100vw 243vh 1px 0px #2AA2B8,283vw 68vh 0px 1px #2AA2B8,47vw 197vh 0px 0px #2AA2B8,
+  284vw 115vh 1px 0px #2AA2B8,157vw 30vh 1px 1px #2AA2B8,264vw 298vh 1px 0px #2AA2B8,150vw -28vh 1px 1px #2AA2B8,-4vw 183vh 2px 3px #2AA2B8,207vw 12vh 2px 1px #2AA2B8,72vw 125vh 2px 3px #2AA2B8,-29vw 117vh 2px 0px #2AA2B8,230vw 255vh 3px 1px #2AA2B8,133vw -4vh 1px 0px #2AA2B8,254vw 238vh 1px 3px #2AA2B8,-17vw -39vh 2px 2px #2AA2B8,285vw 267vh 0px 1px #2AA2B8,69vw 134vh 3px 0px #2AA2B8,107vw -43vh 3px 0px #2AA2B8,137vw 234vh 3px 0px #2AA2B8,192vw 278vh 0px 2px #2AA2B8,43vw -42vh 1px 3px #2AA2B8,170vw 282vh 1px 0px #2AA2B8,-37vw 73vh 1px 2px #2AA2B8,111vw 217vh 2px 0px #2AA2B8,187vw 215vh 3px 2px #2AA2B8,70vw 257vh 2px 2px #2AA2B8,-14vw 84vh 0px 1px #2AA2B8,164vw 110vh 0px 1px #2AA2B8,230vw 37vh 1px 3px #2AA2B8,-50vw 6vh 0px 3px #2AA2B8,292vw 124vh 1px 2px #2AA2B8,84vw 102vh 2px 0px #2AA2B8,129vw 162vh 1px 0px #2AA2B8,70vw 272vh 1px 3px #2AA2B8,226vw -34vh 2px 0px #2AA2B8,180vw 44vh 0px 1px #2AA2B8,262vw 250vh 0px 2px #2AA2B8,174vw 199vh 0px 0px #2AA2B8,213vw 64vh 3px 3px #2AA2B8,76vw 108vh 0px 1px #2AA2B8,-30vw 248vh 0px 0px #2AA2B8,137vw 154vh 3px 1px #2AA2B8,114vw -7vh 1px 0px #2AA2B8,285vw 151vh 3px 2px #2AA2B8,55vw -2vh 2px 0px #2AA2B8,175vw 61vh 1px 1px #2AA2B8,7vw 75vh 2px 0px #2AA2B8,16vw 198vh 2px 0px #2AA2B8,-13vw 239vh 0px 1px #2AA2B8;
 
   
   
   
-  opacity: .07;
+  opacity: .12;
   animation: zoom 15s alternate infinite;
 }
+
+
+
+
 
 @keyframes zoom {
   0%{
@@ -65,8 +71,9 @@
 }
 
 
-
-
+html {
+  scroll-behavior: smooth;
+}
 canvas {
     display: block;
     width: 50%;
@@ -78,6 +85,8 @@ hr{
   width: 80%;
 }
 body {
+  scroll-behavior: smooth;
+
     font-family: "Vibur", sans-serif;
     max-width: 100%;
     overflow-x: hidden;
@@ -94,10 +103,6 @@ body {
   background-size: auto;
 
 }
-  body ::-webkit-scrollbar{
-    width: 0.2rem;
-  }
-
   
 
   .stroke {
@@ -140,7 +145,7 @@ body {
   
   
   .content-section {
-    background: #383838;
+    background: #212121;
     padding: 10px 20px;
     border: 2px solid #17a2b8;
     border-radius: 7px;
@@ -152,10 +157,24 @@ body {
 
   }
   
+
+  .btn{
+    border: 1px solid #17a2b8;
+  }
+  .btn-outline-secondary{
+    color: #575656;
+    border: 1px solid #575656;
+
+
+  }
+  .btn-outline-secondary:hover{
+    background-color: #2a2a2a;
   
+
+  }
   
   .content-section2 {
-    background: #1a1a1a;
+    background: #212121;
     padding: 10px 20px;
     border: 2px solid #383838;
     border-radius: 7px;
@@ -419,6 +438,7 @@ body {
 
 @media(min-width:100px){
   #myEl{
+    
       margin-left:10%;
   }
 }
@@ -429,6 +449,12 @@ body {
 }
 
 @media(min-width:1000px){
+  #myEl{
+      margin-left:45%;
+  }
+}
+
+@media(min-width:1200px){
   #myEl{
       margin-left:50%;
   }
@@ -576,7 +602,6 @@ body {
 
   .grid {  
 
-    width:50%;
     margin-bottom:25px;
   }
 
@@ -781,14 +806,14 @@ table {
 
 }
 .flip-card .flip-card-front {
-  background: #1a1a1a;
+  background: #212121;
   border: 2px solid #383838;
   border-radius: 7px;
   color: white;
   box-shadow: 2px 4px 8px rgba(0, 0, 0, .8);
 }
 .flip-card .flip-card-back {
-  background: #1b1b1b;
+  background: #212121;
   border: 2px solid #383838;
   border-radius: 7px;
   color: white;
@@ -811,3 +836,87 @@ table {
   font-family: "Vibur", sans-serif;
 
 }
+
+
+
+
+
+
+
+
+
+.wavee {
+  opacity: 0;
+
+  height: 5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.wave {
+  width: 5px;
+  height: 25px;
+  background: #17a2b8;
+  margin: 10px;
+  animation: wave 1s linear infinite;
+  border-radius: 1px;
+}
+.wave:nth-child(2) {
+  animation-delay: 0.1s;
+}
+.wave:nth-child(3) {
+  animation-delay: 0.2s;
+}
+.wave:nth-child(4) {
+  animation-delay: 0.3s;
+}
+.wave:nth-child(5) {
+  animation-delay: 0.4s;
+}
+.wave:nth-child(6) {
+  animation-delay: 0.5s;
+}
+.wave:nth-child(7) {
+  animation-delay: 0.6s;
+}
+.wave:nth-child(8) {
+  animation-delay: 0.7s;
+}
+.wave:nth-child(9) {
+  animation-delay: 0.8s;
+}
+.wave:nth-child(10) {
+  animation-delay: 0.9s;
+}
+
+@keyframes wave {
+  0% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
