--- a/cube/templates/cube/base.html
+++ b/cube/templates/cube/base.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <!-- icons -->
     
-		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/nealmick/site@thirteen/cube/static/cube/main.css">
+      <link href="{% static 'cube/main.css'%}" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -24,7 +24,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/three@0.122.0/examples/js/controls/OrbitControls.min.js"></script>
     <title>Neal Mick!</title>
 	</head>
-  <body style="background-color:#383838;" style="flex: 1; overflow: auto">
+  <body style="background-color:#1a1a1a;" style="flex: 1; overflow: auto">
 
     <header class="site-header background">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
